Add paint functionality so squares turn black

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   </head>
 
   <body>
-
-
-
+    <button class="gridsize">Change Density</button>
     <script src="scripts/script.js"></script>
   </body>
 
